tripviewer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: tripviewer
        image: registryjpn0775.azurecr.io/tripviewer:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web-dev
spec:
  ports:
  - port: 80
  selector:
    app: tripviewer
